--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Light mode colors -->
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+
+    <!-- Dark mode colors -->
+    <color name="colorPrimaryDarkMode">#BB86FC</color>
+    <color name="colorPrimaryVariantDarkMode">#3700B3</color>
+    <color name="colorAccentDarkMode">#03DAC5</color>
 </resources>
